#
# Copyright (c) 2026      Nanook Consulting  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# Synthetic hwloc topology XML files used to exercise the src/hwloc
# datatype layer (pack/unpack/print/copy/size) against machine shapes
# other than the one the tests happen to run on. Consumed by the
# hwloc_datatype unit test (test/unit), which cycles over every file
# named here. These fixtures were imported from PRRTE's test suite.

EXTRA_DIST = test-topo.xml test-topo2.xml
