#
# PMIx copyrights:
# Copyright (c) 2013      Intel, Inc. All rights reserved
#
#########################
# Copyright (c) 2004-2005 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2005 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart, 
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2010      Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2011      Sandia National Laboratories. All rights reserved.
#########################
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

# This makefile.am does not stand on its own - it is included from include/Makefile.am

headers += \
	include/atomics/architecture.h \
	include/atomics/atomic.h \
	include/atomics/atomic_impl.h \
	include/atomics/timer.h \
        include/atomics/cma.h

include include/atomics/alpha/Makefile.am
include include/atomics/amd64/Makefile.am
include include/atomics/arm/Makefile.am
include include/atomics/ia32/Makefile.am
include include/atomics/ia64/Makefile.am
include include/atomics/mips/Makefile.am
include include/atomics/osx/Makefile.am
include include/atomics/powerpc/Makefile.am
include include/atomics/sparcv9/Makefile.am
include include/atomics/sync_builtin/Makefile.am
