#
# Copyright (c) 2026      Nanook Consulting  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

check_PROGRAMS = util_hash util_name_fns \
    util_output util_error util_cmd_line \
    util_show_help util_timings util_context_fns \
    util_basename util_string_copy util_argv util_path \
    util_environ util_alfg util_printf util_os_dirpath \
    util_net util_if util_parse_options util_os_path

TESTS = util_hash util_name_fns \
    util_output util_error util_cmd_line \
    util_show_help util_timings util_context_fns \
    util_basename util_string_copy util_argv util_path \
    util_environ util_alfg util_printf util_os_dirpath \
    util_net util_if util_parse_options util_os_path

util_hash_SOURCES = util_hash.c
util_hash_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_hash_LDADD = \
    $(top_builddir)/src/libpmix.la

util_name_fns_SOURCES = util_name_fns.c
util_name_fns_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_name_fns_LDADD = \
    $(top_builddir)/src/libpmix.la

util_output_SOURCES = util_output.c
util_output_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_output_LDADD = \
    $(top_builddir)/src/libpmix.la

util_error_SOURCES = util_error.c
util_error_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_error_LDADD = \
    $(top_builddir)/src/libpmix.la

util_cmd_line_SOURCES = util_cmd_line.c
util_cmd_line_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_cmd_line_LDADD = \
    $(top_builddir)/src/libpmix.la

util_show_help_SOURCES = util_show_help.c
util_show_help_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_show_help_LDADD = \
    $(top_builddir)/src/libpmix.la

util_timings_SOURCES = util_timings.c
util_timings_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_timings_LDADD = \
    $(top_builddir)/src/libpmix.la

util_context_fns_SOURCES = util_context_fns.c
util_context_fns_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_context_fns_LDADD = \
    $(top_builddir)/src/libpmix.la

util_basename_SOURCES = util_basename.c
util_basename_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_basename_LDADD = \
    $(top_builddir)/src/libpmix.la

util_string_copy_SOURCES = util_string_copy.c
util_string_copy_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_string_copy_LDADD = \
    $(top_builddir)/src/libpmix.la

util_argv_SOURCES = util_argv.c
util_argv_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_argv_LDADD = \
    $(top_builddir)/src/libpmix.la

util_path_SOURCES = util_path.c
util_path_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_path_LDADD = \
    $(top_builddir)/src/libpmix.la

util_environ_SOURCES = util_environ.c
util_environ_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_environ_LDADD = \
    $(top_builddir)/src/libpmix.la

util_alfg_SOURCES = util_alfg.c
util_alfg_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_alfg_LDADD = \
    $(top_builddir)/src/libpmix.la

util_printf_SOURCES = util_printf.c
util_printf_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_printf_LDADD = \
    $(top_builddir)/src/libpmix.la

util_os_dirpath_SOURCES = util_os_dirpath.c
util_os_dirpath_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_os_dirpath_LDADD = \
    $(top_builddir)/src/libpmix.la

util_net_SOURCES = util_net.c
util_net_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_net_LDADD = \
    $(top_builddir)/src/libpmix.la

util_if_SOURCES = util_if.c
util_if_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_if_LDADD = \
    $(top_builddir)/src/libpmix.la

util_parse_options_SOURCES = util_parse_options.c
util_parse_options_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_parse_options_LDADD = \
    $(top_builddir)/src/libpmix.la

util_os_path_SOURCES = util_os_path.c
util_os_path_LDFLAGS = $(PMIX_PKG_CONFIG_LDFLAGS)
util_os_path_LDADD = \
    $(top_builddir)/src/libpmix.la

clean-local:
	rm -f util_hash util_name_fns \
	    util_output util_error util_cmd_line \
	    util_show_help util_timings util_context_fns \
	    util_basename util_string_copy util_argv util_path \
	    util_environ util_alfg util_printf util_os_dirpath \
	    util_net util_if util_parse_options util_os_path
